# rag-pipeline-pgvector

./: .env.example  .gitignore  README.en.md  README.fr.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: iamdataeng-evaluate.yml
contracts/: chunks.json  evaluation.json
fixtures/: generate_fixtures.py
src/: answer.py  chunk.py  embed.py  evaluate.py  retrieve.py  store.py
tests/: test_evaluate.py
